[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/HTPController.gd" type="Script" id=1]
[ext_resource path="res://sprites/menu/howtoplay.png" type="Texture" id=2]
[ext_resource path="res://sprites/menu/tutorial.png" type="Texture" id=3]
[ext_resource path="res://sprites/menu/back.png" type="Texture" id=4]

[node name="HowToPlay" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0

[node name="HTPController" type="VBoxContainer" parent="."]
margin_right = 964.0
margin_bottom = 560.0
focus_neighbour_top = NodePath("BackBtn")
focus_neighbour_bottom = NodePath("BackBtn")
custom_constants/separation = 20
script = ExtResource( 1 )

[node name="Title" type="TextureRect" parent="HTPController"]
margin_right = 964.0
margin_bottom = 52.0
texture = ExtResource( 2 )

[node name="Tutorial" type="TextureRect" parent="HTPController"]
margin_top = 72.0
margin_right = 964.0
margin_bottom = 488.0
texture = ExtResource( 3 )

[node name="BackBtn" type="TextureButton" parent="HTPController"]
margin_top = 508.0
margin_right = 964.0
margin_bottom = 560.0
texture_normal = ExtResource( 4 )
[connection signal="focus_entered" from="HTPController/BackBtn" to="HTPController" method="_on_BackBtn_focus_entered"]
[connection signal="focus_exited" from="HTPController/BackBtn" to="HTPController" method="_on_BackBtn_focus_exited"]
[connection signal="mouse_entered" from="HTPController/BackBtn" to="HTPController" method="_on_BackBtn_mouse_entered"]
[connection signal="mouse_exited" from="HTPController/BackBtn" to="HTPController" method="_on_BackBtn_mouse_exited"]
[connection signal="pressed" from="HTPController/BackBtn" to="HTPController" method="_on_BackBtn_pressed"]
